fixed button spacing on homepage

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -190,6 +190,7 @@ font-size:24px;
     display: inline-block;
     font-size: 12px;
     border-radius: 2px;
+    margin-top:5%;
 }
 #saveEditBtn{
 	background-color: #82308e;
@@ -202,6 +203,7 @@ font-size:24px;
     font-size: 12px;
     border-radius: 2px;
     float:right;
+    margin-top:5%;
 }
 
 #applyFiltersBtn{
@@ -417,9 +419,7 @@ width:100%;
     display:flex;
     flex-direction: column;
     margin-bottom:10%;
-    position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+    
 }
 .modal-content-wrapper{
   display: flex;
